# mlops

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.api  Makefile  README.md  compose.yaml  docker-compose.yml  dvc.yaml  environment.api.yml  environment.yml  params.yaml  pyproject.toml  request_body.json  tasks-1-2.md  tasks.md
.dvc/: config
.github/workflows/: ci.yml  release.yml
data/: raw.dvc
data/raw/: dataset.dvc
docs/: mkdocs.yml
docs/docs/: index.md
mlops/: dataset.py  features.py  plots.py
mlops/modeling/: predict.py  train.py
notebooks/: eda.ipynb  experiments.ipynb
tests/: conftest.py  test_api.py  test_preprocess.py
